--- a/css/style.css
+++ b/css/style.css
@@ -16,52 +16,73 @@
   display: none; }
 
 .header-background {
-  /* background-color: black; */
-  /* display: grid; */
-  font-size: 20px;
-  /* grid-template-columns: 20% 80%; */
+  position: relative;
+  /* font-size: 20px;
+  
   padding: 10px 40px;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../../imagenes/desktop/ancash-huaraz.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent),
+    url("../../imagenes/desktop/ancash-huaraz.jpg");
   background-position: center center;
   background-repeat: none;
   background-size: cover;
   color: black;
-  height: 80vh; }
+  height: 50vh; */ }
+  .header-background .header-desktop-background {
+    display: grid;
+    grid-template-rows: 50vh 50vh; }
+    .header-background .header-desktop-background .header-info-portfolio {
+      background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../../imagenes/desktop/ancash-huaraz.jpg");
+      background-position: center center;
+      background-repeat: none;
+      background-size: cover;
+      grid-row: 1;
+      display: grid;
+      grid-template-columns: 30% 70%; }
+      .header-background .header-desktop-background .header-info-portfolio ul {
+        grid-column: 2;
+        display: flex;
+        justify-content: space-around;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        height: min-content; }
+        .header-background .header-desktop-background .header-info-portfolio ul li {
+          list-style: none;
+          cursor: pointer; }
+          .header-background .header-desktop-background .header-info-portfolio ul li a {
+            text-decoration: none;
+            color: white;
+            font-size: 17px; }
+          .header-background .header-desktop-background .header-info-portfolio ul li:hover {
+            /* background: linear-gradient(45deg, red, #800000, #400000, black); */
+            /* border-radius: 8px; */
+            opacity: .5; }
+    .header-background .header-desktop-background .header-seccionVacia {
+      grid-row: 2;
+      background-color: #1f2233; }
   .header-background .header-container-fotoTitulo {
-    padding-top: 10vh; }
+    position: absolute;
+    top: 55%;
+    /* Centra en la mitad de la pantalla verticalmente */
+    left: 50%;
+    /* Centra en la mitad de la pantalla horizontalmente */
+    transform: translate(-50%, -50%);
+    /* Ajusta para centrar correctamente */ }
     .header-background .header-container-fotoTitulo .header-background-foto {
       margin: auto;
-      text-align: center; }
+      text-align: center;
+      grid-row: 1; }
       .header-background .header-container-fotoTitulo .header-background-foto .header-foto {
-        width: 200px; }
+        width: 200px;
+        display: block;
+        /* Asegura que la imagen se centre correctamente */
+        margin: auto;
+        /* Centra la imagen horizontalmente */ }
     .header-background .header-container-fotoTitulo .header-titulos {
       text-align: center;
       color: white; }
       .header-background .header-container-fotoTitulo .header-titulos h1 {
         color: #d96959; }
-  .header-background .header-info-portfolio {
-    /* margin: auto 0; */
-    display: grid;
-    grid-template-columns: 30% 70%; }
-    .header-background .header-info-portfolio .header-logo {
-      grid-column: 1;
-      width: 100%; }
-    .header-background .header-info-portfolio ul {
-      grid-column: 2;
-      display: flex;
-      justify-content: space-around;
-      padding: 0;
-      margin: 0;
-      width: 100%; }
-      .header-background .header-info-portfolio ul li {
-        list-style: none;
-        cursor: pointer; }
-        .header-background .header-info-portfolio ul li a {
-          text-decoration: none;
-          color: white; }
-        .header-background .header-info-portfolio ul li:hover {
-          background: linear-gradient(45deg, red, #800000, #400000, black);
-          border-radius: 8px; }
   .header-background .header-nombre-portfolio {
     padding-right: 20px;
     margin-left: 10px;
@@ -107,28 +128,22 @@
         font-size: 18px; }
         .todo-el-contenido .sobreMi-container .texto-sobreMi p:nth-of-type(2) {
           padding-top: 0; }
-  .todo-el-contenido .estudios,
   .todo-el-contenido .sobreMi-container,
   .todo-el-contenido .portfolio-container-desktop,
   .todo-el-contenido .contacto-container,
-  .todo-el-contenido .idiomas,
   .todo-el-contenido .estudios-especializaciones {
     text-align: center;
     width: 100%; }
-    .todo-el-contenido .estudios h2,
     .todo-el-contenido .sobreMi-container h2,
     .todo-el-contenido .portfolio-container-desktop h2,
     .todo-el-contenido .contacto-container h2,
-    .todo-el-contenido .idiomas h2,
     .todo-el-contenido .estudios-especializaciones h2 {
       font-size: 30px;
       position: relative;
       padding-top: 0px; }
-      .todo-el-contenido .estudios h2::after,
       .todo-el-contenido .sobreMi-container h2::after,
       .todo-el-contenido .portfolio-container-desktop h2::after,
       .todo-el-contenido .contacto-container h2::after,
-      .todo-el-contenido .idiomas h2::after,
       .todo-el-contenido .estudios-especializaciones h2::after {
         content: "";
         position: absolute;
@@ -141,19 +156,18 @@
         background-color: red;
         /* Cambia esto para cambiar el color del subrayado */
         left: 50%; }
-    .todo-el-contenido .estudios i,
     .todo-el-contenido .sobreMi-container i,
     .todo-el-contenido .portfolio-container-desktop i,
     .todo-el-contenido .contacto-container i,
-    .todo-el-contenido .idiomas i,
     .todo-el-contenido .estudios-especializaciones i {
       color: white; }
   .todo-el-contenido .estudios-especializaciones {
     background-color: #25273e;
-    padding: 20px 0 70px; }
+    padding: 50px 0 70px; }
     .todo-el-contenido .estudios-especializaciones .btnMenu-container {
       display: flex;
-      justify-content: center; }
+      justify-content: center;
+      padding-bottom: 20px; }
       .todo-el-contenido .estudios-especializaciones .btnMenu-container button {
         margin: 10px;
         padding: 0.375rem;
@@ -205,57 +219,60 @@
           display: none; }
     .todo-el-contenido .estudios-especializaciones .oculto {
       display: none; }
-  .todo-el-contenido #carouselExampleIndicators2 .carousel-inner {
-    padding: 5em; }
-    .todo-el-contenido #carouselExampleIndicators2 .carousel-inner .carousel-item {
-      max-width: 100%; }
-      .todo-el-contenido #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container {
-        display: flex;
-        justify-content: space-evenly; }
-        .todo-el-contenido #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card {
-          max-width: calc(100%/3);
-          margin: 0 2em;
-          box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-          border: none;
-          border-radius: 0;
-          background-color: gray;
-          padding: 50px; }
-          .todo-el-contenido #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card a {
-            padding: 15px;
-            font-size: 17px;
-            letter-spacing: 1.3px;
-            background: linear-gradient(45deg, red, #800000, #400000, black);
+  .todo-el-contenido .portfolio-container-desktop {
+    padding: 20px; }
+    .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner {
+      padding: 5em;
+      padding-top: 2em; }
+      .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item {
+        max-width: 100%; }
+        .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container {
+          display: flex;
+          justify-content: space-evenly; }
+          .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card {
+            max-width: calc(100%/3);
+            margin: 0 2em;
+            box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
             border: none;
-            color: white;
-            border-radius: 10px;
-            width: fit-content;
-            margin: 0;
-            font-weight: 900;
-            cursor: pointer; }
-            .todo-el-contenido #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card a:hover {
-              opacity: 0.7; }
-          .todo-el-contenido #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card img {
-            max-width: 70%;
-            height: 110px;
-            margin: auto; }
-  .todo-el-contenido #carouselExampleIndicators2 .carousel-control-prev,
-  .todo-el-contenido #carouselExampleIndicators2 .carousel-control-next {
-    background-color: gray;
-    width: 5vh;
-    height: 5vh;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%); }
+            border-radius: 0;
+            background-color: gray;
+            padding: 50px; }
+            .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card a {
+              padding: 15px;
+              font-size: 17px;
+              letter-spacing: 1.3px;
+              background: linear-gradient(45deg, red, #800000, #400000, black);
+              border: none;
+              color: white;
+              border-radius: 10px;
+              width: fit-content;
+              margin: 0;
+              font-weight: 900;
+              cursor: pointer; }
+              .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card a:hover {
+                opacity: 0.7; }
+            .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-inner .carousel-item .cards-container .card img {
+              max-width: 70%;
+              height: 110px;
+              margin: auto; }
+    .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-control-prev,
+    .todo-el-contenido .portfolio-container-desktop #carouselExampleIndicators2 .carousel-control-next {
+      background-color: gray;
+      width: 5vh;
+      height: 5vh;
+      border-radius: 50%;
+      top: 50%;
+      transform: translateY(-50%); }
   .todo-el-contenido .contacto-container {
-    padding: 0 20px 20px;
+    padding: 20px;
     background-color: #25273e; }
     .todo-el-contenido .contacto-container .redes {
-      padding: 20px 0; }
+      /* padding: 20px 0; */ }
       .todo-el-contenido .contacto-container .redes a i {
         font-size: 25px;
         color: white; }
       .todo-el-contenido .contacto-container .redes p {
-        padding-top: 20px; }
+        margin: 0; }
 
 /* VERSION MOBILE --------  */
 @media (max-width: 576px) {
@@ -411,6 +428,64 @@
         font-size: 18px; }
         .todo-el-contenido .sobreMi-container .texto-sobreMi p:nth-of-type(2) {
           padding-top: 0; }
+    .todo-el-contenido .estudios-especializaciones {
+      background-color: #25273e;
+      padding: 0px; }
+      .todo-el-contenido .estudios-especializaciones .btnMenu-container {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 20px; }
+        .todo-el-contenido .estudios-especializaciones .btnMenu-container button {
+          margin: 10px;
+          padding: 0.375rem;
+          border-radius: 0.375rem;
+          background-color: #25273e;
+          color: white;
+          border: 1px solid #25273e; }
+        .todo-el-contenido .estudios-especializaciones .btnMenu-container .btn-seleccionado {
+          background-color: #eb5c4f; }
+      .todo-el-contenido .estudios-especializaciones .cards-container {
+        display: flex;
+        justify-content: space-evenly;
+        min-height: 304px;
+        max-width: 100%; }
+        .todo-el-contenido .estudios-especializaciones .cards-container .card {
+          width: 100%;
+          margin: 0 1em;
+          box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+          border: 1px solid #423949;
+          border-radius: 0;
+          background-color: #1f2233;
+          padding: 25px; }
+          .todo-el-contenido .estudios-especializaciones .cards-container .card .card-body {
+            width: 200px;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white; }
+            .todo-el-contenido .estudios-especializaciones .cards-container .card .card-body .card-text {
+              padding: 0; }
+          .todo-el-contenido .estudios-especializaciones .cards-container .card .btnVerMas {
+            width: fit-content;
+            margin: auto;
+            border: none;
+            background-color: transparent; }
+            .todo-el-contenido .estudios-especializaciones .cards-container .card .btnVerMas i {
+              font-size: 40px; }
+          .todo-el-contenido .estudios-especializaciones .cards-container .card .card-iconos {
+            width: 100%;
+            display: flex;
+            justify-content: space-around; }
+            .todo-el-contenido .estudios-especializaciones .cards-container .card .card-iconos i {
+              font-size: 3rem; }
+            .todo-el-contenido .estudios-especializaciones .cards-container .card .card-iconos img {
+              width: 3rem; }
+          .todo-el-contenido .estudios-especializaciones .cards-container .card .oculto {
+            display: none; }
+      .todo-el-contenido .estudios-especializaciones .oculto {
+        display: none; }
     .todo-el-contenido .portfolio-container-mobile {
       display: block; }
       .todo-el-contenido .portfolio-container-mobile .carousel-inner {
@@ -422,6 +497,7 @@
             padding: 15px;
             font-size: 17px;
             letter-spacing: 1.3px;
+            background: linear-gradient(45deg, red, #800000, #400000, black);
             border: none;
             color: white;
             border-radius: 10px;
@@ -504,18 +580,18 @@
           opacity: 0.7; }
 
 .contacto-container {
-  padding: 0 20px 20px;
-   }
+  padding: 0 20px 20px; }
   .contacto-container h2 {
-    margin: 0 0 8px; }
+    margin-bottom: 30px; }
   .contacto-container .redes {
-    padding: 20px 0; }
+    /* padding: 20px 0; */
+    /* p {
+      padding-top: 20px;
+      margin: 0 0 16px;
+    } */ }
     .contacto-container .redes a i {
       font-size: 25px;
       color: white; }
-    .contacto-container .redes p {
-      padding-top: 20px;
-      margin: 0 0 16px; }
 
 @media (max-width: 576px) {
   .btn-regresar, .img-desktop {
