--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -20,7 +20,7 @@
 
     .header-info-portfolio {
       background: linear-gradient(rgba(0, 0, 0, 0.8), transparent),
-        url("../../imagenes/desktop/ancash-huaraz.jpg");
+        url("../imagenes/desktop/ancash-huaraz.jpg");
       background-position: center center;
       background-repeat: none;
       background-size: cover;
